--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
     <!-- CSS import -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Vue.js import -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+
     <title>Vue Hello</title>
 </head>
 <body>
+
+    <div id="app" >
+        <div v-bind:class="msClass">
+            <h1 v-bind:class="msClassSecond">{{ message }}</h1>
+            <img v-bind:src="img" v-bind:alt="imgPlaceholder">
+        </div>
+    </div>
     
     <!-- js Import -->
     <script type="text/javascript" src="javascript/myscript.js"></script>
